syntax = "proto3";

option java_package = "hmda.persistence.serialization";
option optimize_for = SPEED;

message InstitutionMessage {
    int32 activityYear = 1;
    string lei = 2;
    int32 agency = 3;
    int32 institutionType = 4;
    string id2017 = 5;
    string taxId = 6;
    int32 rssd = 7;
    repeated string emailDomains = 8;
    RespondentMessage respondent = 9;
    ParentMessage parent = 10;
    int32 assets = 11;
    int32 otherLenderCode = 12;
    TopHolderMessage topHolder = 13;
    bool hmdaFilter = 14;
}

message RespondentMessage {
    string name = 1;
    string state = 2;
    string city = 3;
}

message ParentMessage {
    int32 idRssd = 1;
    string name = 2;
}

message TopHolderMessage {
    int32 idRssd = 1;
    string name = 2;
}